card live alignment fix

--- a/DES-2164_Fancy_Feast_Spotlight-BP_Refresh/assets/styles.css
+++ b/DES-2164_Fancy_Feast_Spotlight-BP_Refresh/assets/styles.css
@@ -597,7 +597,7 @@ h2.citrusFancy__feast__sectionTitle span.nobr {
   height: 230px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: start;
   border-radius: 8px;
 }
 
@@ -897,8 +897,10 @@ h2.citrusFancy__feast__sectionTitle span.nobr {
   }
 
   .citrusFancy__feast__card-body {
-    margin: unset;
+    margin: 20px 0 17px 20px;
+    /* margin-top: 20px;
     margin-left: 17px;
+    margin-bottom: 20px; */
   }
 
   .citrusFancy__feast__commonCTA {
